<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".presentation.main.add_point_fragment.AddPointFragment">

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="repeat_for_text_view, repeat_text_view" />

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/point"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/point_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fui_transparent"
        android:src="@drawable/baseline_library_add_check_24"
        app:layout_constraintEnd_toStartOf="@id/note_image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text_view" />

    <ImageButton
        android:id="@+id/note_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fui_transparent"
        android:src="@drawable/baseline_note_add_24"
        app:layout_constraintEnd_toStartOf="@id/event_image_button"
        app:layout_constraintStart_toEndOf="@id/point_image_button"
        app:layout_constraintTop_toBottomOf="@id/header_text_view" />

    <ImageButton
        android:id="@+id/event_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fui_transparent"
        android:src="@drawable/baseline_event_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/note_image_button"
        app:layout_constraintTop_toBottomOf="@id/header_text_view" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_image_button" />

    <TextView
        android:id="@+id/when_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when"
        app:layout_constraintBottom_toBottomOf="@+id/date_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_text_view" />

    <TextView
        android:id="@+id/at_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_what_time"
        app:layout_constraintBottom_toBottomOf="@+id/time_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time_text_view" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="amount_text_view,at_text_view,when_text_view,repeat_for_text_view"
        tools:layout_editor_absoluteX="29dp" />

    <EditText
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/edit_text" />

    <EditText
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/date_text_view" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/no_specific_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/repeat_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_text_view" />

    <TextView
        android:id="@+id/repeat_for_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/repeat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_text_view" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="100"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/repeat_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>